--- a/sites/templates/timeline/timelines.html
+++ b/sites/templates/timeline/timelines.html
@@ -1,6 +1,6 @@
 {% extends "timeline/base.html" %}
-
 {% load timeline_widget_tags %}
+
 
 {% block title %} 
   {% if pg == "hot" %} 热门 {% endif %}
@@ -27,7 +27,9 @@
     <div class="well">
       <h4>最新时间线</h4>
       <ul>
-        {% tl_last %}
+		
+        {% tl_last %} 
+		
       </ul>
     </div>
   </div>
@@ -44,13 +46,13 @@
         <img src="{{ o.get_cover_url }}"/>
       </div>
       <div class="info">
-        <h3> <a href="{% url timeline_detail o.pk %}">{{o.title}}</a> </h3>
+        <h3> <a href="{% url "timeline_detail" o.pk %}">{{o.title}}</a> </h3>
         <div class="extinfo">
           <span>事件: {{o.num_events}}</span>
           <span>浏览: {{o.num_views}}</span>
           <span>回复: {{o.num_replies}}</span>
           <span>by: 
-            <a href="{% url userena_profile_detail o.created_by.username %}">
+            <a href="{% url "userena_profile_detail" o.created_by.username %}">
               {{o.created_by}}
             </a>
           </span>
