--- a/sites/templates/timeline/widgets/last.html
+++ b/sites/templates/timeline/widgets/last.html
@@ -1,3 +1,3 @@
 {% for t in timelines %}
-<li><a href="{% url timeline_detail t.pk %}">{{t.title}}</a></li>
+<li><a href="{% url "timeline_detail" t.pk %}">{{t.title}}</a></li>
 {% endfor %}
