--- a/sites/templates/umessages/message_list.html
+++ b/sites/templates/umessages/message_list.html
@@ -10,7 +10,7 @@
 {% block sidebar %}
   <div class="sidebar">
     <div style="padding-top: 20px;">
-      <a href="{% url userena_umessages_compose %}" class="btn">
+      <a href="{% url "userena_umessages_compose" %}" class="btn">
         <i class="icon-plus"></i>
         发送站内消息
       </a>
@@ -25,7 +25,7 @@
       {% for message in message_list %}
         <li>
           {% if message.from_user == user %}
-            <a href="{% url userena_umessages_detail message.to_user.username %}">
+            <a href="{% url "userena_umessages_detail" message.to_user.username %}">
               <img src="{{ message.to_user.profile.get_mugshot_url }}" class="avatar" />
               <span class="uname {% if message.to_user.pk == SYSTEM_USER_ID %}sysuser{% endif %}">
                 {% if message.to_user.pk == SYSTEM_USER_ID %}
@@ -36,7 +36,7 @@
               </span>
               {% get_unread_message_count_between user and message.to_user as unread_between_count %}
           {% else %}
-            <a href="{% url userena_umessages_detail message.from_user.username %}">
+            <a href="{% url "userena_umessages_detail" message.from_user.username %}">
               <img src="{{ message.from_user.profile.get_mugshot_url }}" class="avatar" />
               <span {% if message.from_user.pk == SYSTEM_USER_ID %}style="color:#DD4B39"{% endif %}>
                 {% if message.from_user.pk == SYSTEM_USER_ID %}
